<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    tools:context=".homeActivity"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu"
        android:layout_gravity="start">

    </com.google.android.material.navigation.NavigationView>

...
            android:background="@drawable/layout_bg"
            android:text="3000ft"
            android:textColor="@color/black"
            app:backgroundTint="@color/white" />

        <ImageButton
            android:id="@+id/imgBtn_gps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Btn_home_range_3000"
            android:layout_alignParentRight="true"
            android:layout_marginTop="40dp"
            android:layout_marginRight ="0dp"
...
            android:fontFamily="@font/allan_bold"
            />



        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            app:titleTextColor="@color/black"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
...
