<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/userPwdInput"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:background="@drawable/beach_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="150sp"
    tools:context=".userSignIn">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/allan_bold"
        android:paddingTop="10sp"
        android:paddingBottom="20sp"
        android:textColor="@color/black"
        android:text="Welcome to SoCalBeach"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/tv_signin_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/allerta"
        android:textColor="#CA0000" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:hint="@string/your_email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:hint="@string/your_pwd"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_logIn"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:fontFamily="@font/allan_bold"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:text="@string/login" />

    <TextView
        android:id="@+id/reg_remind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/allerta"
        android:text="@string/register_remind"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_to_sign_up"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:fontFamily="@font/allan_bold"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:text="@string/register" />

</LinearLayout>